# migrate-tests-from-testpad-to-moodle

./: .pre-commit-config.yaml  main.py  pyproject.toml  setup.cfg
.github/workflows/: build.yml
src/: config.py  converter.py  gui.py  main.py  services.py
src/sdk/: html_transformer.py
